[refactor] minor cleanup